Working on reminders. Work still in progress.

--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -468,6 +468,14 @@
                                                                     <div class="form-group {{field.size || 'col-md-12'}}" ng-repeat="(fieldKey, field) in question.fields">
                                                                         <md-input-container flex-gt-sm style="display: block; margin-top: 1.5em; margin-bottom: -1em;">
                                                                             <label>{{field.tag}}</label>
+                                                                            <span ng-if="field.hint" class="float-right" angular-popover direction="left" template="{{field.hint}}" style="position: relative; cursor: pointer; margin-top: 2%; margin-bottom: 2%; color: #75797d; font-size: 14px; z-index: 1000">
+                                                                                <md-icon class="float-right">
+                                                                                    <img src="img/help.png" style="width:140%; cursor:pointer" />
+                                                                                </md-icon>
+                                                                            </span>
+                                                                            <md-icon ng-if="field.type == 'date'">
+                                                                                <img src="img/icons/clock.svg" style="width:140%; cursor: pointer;" ng-click="controller.newReminder(answer[question.name][position][field.name], answer[question.name][position]['reminder-text'], questionGroup.name, answerKey, question.name, position)"/>
+                                                                            </md-icon>
                                                                             <div ng-if="field.type != 'reference' && field.type != 'number' && field.type != 'long-text' && field.type != 'date'">
                                                                                 <input 
                                                                                     name="{{question.name + '-' + field.name + groupKey + '-' + position}}"
@@ -504,7 +512,7 @@
                                                                                 <textarea 
                                                                                     name="{{question.name + '-' + field.name + groupKey + '-' + position}}"
                                                                                     ng-model="answer[question.name][position][field.name]" 
-                                                                                    rows="3" 
+                                                                                    rows="2" 
                                                                                     md-select-on-focus
                                                                                     ng-readonly="controller.formatObjects[controller.currentNavItem].readonly"
                                                                                     ng-required="field.required"
@@ -519,12 +527,6 @@
                                                                                     style="margin-top: 12px">
                                                                                 </md-datepicker>
                                                                             </div>
-                                                                            <md-icon ng-if="field.hint">
-                                                                                <img src="img/help.png" style="width:140%" />
-                                                                            </md-icon>
-                                                                            <md-icon ng-if="field.type == 'date'">
-                                                                                <img src="img/icons/clock.svg" style="width:140%; cursor: pointer;" / ng-click="controller.newReminder(answer[question.name][position][field.name])">
-                                                                            </md-icon>
                                                                             <div ng-messages="$eval(controller.formatObjects[controller.currentNavItem].formName + '[\'' + question.name + '-' + field.name + groupKey + '-' + position + '\'].$error')">
                                                                                 <div ng-message="required">Se requiere de este campo para continuar.</div>
                                                                                 <div ng-message="min">El valor mínimo permitido es de {{field.min}}.</div>
