--- a/public/css/main.css
+++ b/public/css/main.css
@@ -309,3 +309,12 @@ md-backdrop{
 .md-datepicker-input-container {
     width: 70%
 }
+
+md-nav-bar.md-default-theme md-nav-ink-bar, md-nav-bar md-nav-ink-bar {
+    color: white;
+    background: white;
+}
+
+/* li.md-nav-item.ng-scope.ng-isolate-scope:hover {
+    background-color: rgb(57,73,171) !important;
+} */
